# Forge

./: .gitignore  .gitmodules  CMakeLists.txt
Forge-Core/: CMakeLists.txt
Forge-Core/src/Core/: Core.cpp  Core.h
Forge-Core/src/Forge-Core/: Application.cpp  Application.h  Core.cpp
Forge-Core/src/Forge-Core/Containers/: RingBuffer.h
Forge-Core/src/Forge-Core/Rendering/: Renderer.cpp  Renderer.h
Forge-Core/tests/: TestCore.cpp
Forge-Entrypoint/: CMakeLists.txt
Forge-Entrypoint/src/EntryPoint/: EntryPoint.cpp
